--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+    <meta name="monetag" content="33aea28ea496918e7054a6ded8d8df1d">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fable - Final Version</title>
@@ -344,4 +345,5 @@
     </nav>
 </div>
 </body>
+
 </html>
